--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,6 +8,7 @@ V2.0.0:
 
 - Added seperate 'helper' MySQL module.
 	- Provides functions for finding and editing rows in DB tables instead of seperate implimentations in seperate modules.
+	- Has config file 'mysqlconfig.py' to specify database name, user etc. Modules can edit any tables inside the database specified here.
 
 - Seperated Omegle module classes.
 	- Supplies an Omegle helper module that can be used with other modules if desired.
