--- a/README.textile
+++ b/README.textile
@@ -5,15 +5,17 @@ It is built with ease of use in mind - whether that use be from the end user, so
 
 The main class in modbot.py provides the most basic of functions (loading plugins and running hooks), while plugins provide all other end-user functionality.
 
-Modbot currently takes 4 arguments - network, channel (without leading '#'), nickname and nickserv password (optional).
+Modbot currently takes 3 arguments - network, channel (without leading '#') and nickname.
+I am looking at providing a settings file that will remove the need for these parameters as well as add some more features.
 
 E.g.
 
 <pre><code>
-python2 modbot.py irc.rizon.net channel ModBot modbotisawesome
+python2 modbot.py irc.ircserver.net channel ModBot
 </code></pre>
 
-Would connect to the channel '#channel', with the nickname 'ModBot', and identify with nickServ (if your specified nick is registered).
+Would connect to 'ircserver' and join the channel '#channel', with the nickname 'ModBot'.
+Modbot will then ask for a NickServ password to identify with.
 
 
 (Documentation on writing plugins is to come)
