--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,11 +6,15 @@ V2.0.0:
 	- Commands that the module responds to are also registered with modbot, along with the methods that should be called.
 	- Hooks like userJoin, userPart are registed in the same way that commands are.
 
-- Added seperate 'helper' MySQL module.
+- Added separate 'helper' MySQL module.
 	- Provides functions for finding and editing rows in DB tables instead of seperate implimentations in seperate modules.
 	- Has config file 'mysqlconfig.py' to specify database name, user etc. Modules can edit any tables inside the database specified here.
 
 - Seperated Omegle module classes.
 	- Supplies an Omegle helper module that can be used with other modules if desired.
 
+- Added separate 'helper' Twitter module.
+
 - Added GPL to modbot and all packaged plugins.
+
+- Modbot now asks for a NickServ password rather than having to pass it as a parameter.
